# setupp

./: .gitignore  CITATION.cff  CMakeLists.txt  LICENSE.txt  PEREGRINE.md  README.md  main.cpp  vcpkg.json
dev/: README.md  build.sh  run_gprof.sh  run_lcov.sh  run_tests.sh  run_valgrind.sh  switch.sh
dev/cmake/: coverage.cmake  profile.cmake  release.cmake
doc/: BUILD.md  CMAKE.md  HABROK.md  SETUP.md  TESTS.md
docs/: PEREGRINE.md
src/: CMakeLists.txt  MAIN.cpp  MAIN.hpp  hello.cpp  hello.hpp
tests/: CMakeLists.txt  tests.cpp  testutils.cpp  testutils.hpp
